[metadata]
name = splintershell
version = 0.0.1
author = one2blame
author_email = contactme@one2bla.me
description = A package for blending shellcodes into network traffic using unsupervised learning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/one2blame/splintershell
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: System :: Networking :: Firewalls
keywords = shellcode, machine, learning, network, packet, capture

[options]
package_dir =
    = src
packages = find:
install_requires =
    loguru>=0.6.0
    sklearn>=0.0
    scapy>=2.4.5

[options.entry_points]
console_scripts =
    splintershell = splintershell.cli:main

[options.packages.find]
where = src
